--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-body {
-	
-}
-
 #name {
 	background: #4aaaa5;
 	position: relative;
@@ -133,6 +129,8 @@ a:visited {
 	color: #777777;
 	background-color: #ffffff;
 	text-align: left;
+	width: 95%;
+	margin-bottom: 10%
 }
 
 #bio-pic {
@@ -150,9 +148,11 @@ a:visited {
 #connect {
 	background-color: white;
 	padding: 20px;
+	width: 90%;
 	float: right;
-	margin-right: 5%;
+	margin-right: 3%;
 	display: inline-block;
+	margin-bottom: 5%
 
 }
 
@@ -169,18 +169,20 @@ a:visited {
 #portfolio {
 	background-color: white;
 	padding: 20px;
-	width: 400px;
-	margin-left: 140px;
+	width: 90%;
+	margin-left: 4%;
 	display: inline-block;
 	color: #777777;
 	background-color: #ffffff;
 	text-align: left;
+	margin-bottom: 5%
 }
 
 .portfolio-div {
 	display: inline-block;
 	position: relative;
 	width: 155px;
+	margin-right: 5%;
 }
 
 .portfolio-text {
@@ -198,16 +200,18 @@ a:visited {
 #contact {
 	background-color: white;
 	display: inline-block;
-	width: 500px;
+	width: 90%;
 	padding: 20px;
-	margin-left: 140px;
+	margin-left: 3%;
+	margin-bottom: 5%;
+	margin-right: 5%
 }
 
 input {
 	width: 99%;
 }
 
-input[type=button] {
+.btn-primary {
 	width: 20%;
 	background-color: #4aaaa5;
 	color: white;
@@ -239,6 +243,10 @@ input[type=button] {
 
 	#links2 {
 		float: none;
+	}
+
+	#portfolio {
+		width: 50%;
 	}
 }
 
@@ -272,6 +280,10 @@ input[type=button] {
 
 	#links2 {
 		float: none;
+	}
+
+	#portfolio {
+		width: 100%;
 	}
 }
 
